SERVER-82627: ReshardingDataReplication joins the ReshardingOplogFetcher thread pool