src/mongo/db/s/resharding/resharding_data_replication.cpp
@@ -546,4 +546,9 @@ ReshardingDonorOplogId ReshardingDataReplication::getOplogApplierResumeId(
                            : ReshardingDonorOplogId{minFetchTimestamp, minFetchTimestamp};
 }
 
+ReshardingDataReplication::~ReshardingDataReplication() {
+    shutdown();
+    join();
+}
+
 }  // namespace mongo
