src/mongo/db/s/resharding/resharding_data_replication.h
@@ -153,6 +153,7 @@ private:
     struct TrustedInitTag {};
 
 public:
+    virtual ~ReshardingDataReplication();
     static std::unique_ptr<ReshardingDataReplicationInterface> make(
         OperationContext* opCtx,
         ReshardingMetrics* metrics,
